--- a/Dyanote/build.gradle
+++ b/Dyanote/build.gradle
@@ -23,6 +23,7 @@ android {
 }
 
 dependencies {
-	compile 'com.android.support:appcompat-v7:+'
-	compile 'com.android.support:support-v4:18.0.0'
+    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:support-v4:18.0.0'
+    compile files('libs/markdown4j-2.2.jar')
 }
