--- a/Dyanote/src/main/AndroidManifest.xml
+++ b/Dyanote/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.dyanote.android.BrowseNotesActivity"
+            android:name=".activity.BrowseNotesActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,18 +26,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.dyanote.android.LoginActivity"
+            android:name=".activity.LoginActivity"
             android:label="@string/title_activity_login"
-            android:parentActivityName="com.dyanote.android.BrowseNotesActivity"
+            android:parentActivityName=".activity.BrowseNotesActivity"
             android:windowSoftInputMode="adjustResize|stateVisible" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.dyanote.android.BrowseNotesActivity" />
         </activity>
         <activity
-            android:name="com.dyanote.android.EditNoteActivity"
+            android:name=".activity.EditNoteActivity"
             android:label="@string/title_activity_edit_note"
-            android:parentActivityName="com.dyanote.android.BrowseNotesActivity" >
+            android:parentActivityName=".activity.BrowseNotesActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.dyanote.android.BrowseNotesActivity" />
