--- a/Dyanote/src/main/AndroidManifest.xml
+++ b/Dyanote/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/DyanoteTheme" >
         <activity
             android:name=".activity.BrowseNotesActivity"
             android:label="@string/app_name" >
